--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "bandejao-puc-rio",
-  "version": "1.0.0",
-  "description": "Bandejão Website",
+  "name": "node-js-getting-started",
+  "version": "0.1.4",
+  "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
-    "materialize-css": "^0.97.6"
-  }
+    "ejs": "^2.3.1",
+    "express": "~4.9.x",
+    "cool-ascii-faces": "~1.3.x"
+  },
+  "engines": {
+    "node": "0.12.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
