--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {    
+  "dependencies": {
+    "assert": "^1.3.0",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "jshint": "^2.9.1"
+    "jshint": "^2.9.1",
+    "mongodb": "^2.1.16"
   },
   "engines": {
     "node": "0.12.2"
