--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   "dependencies": {
     "assert": "^1.3.0",
     "ejs": "^2.3.1",
+    "eslint": "^2.9.0",
     "express": "~4.9.x",
-    "jshint": "^2.9.1",
-    "mongodb": "^2.1.16"
+    "mongodb": "^2.1.18",
+    "mongoose": "^4.4.14"
   },
   "engines": {
-    "node": "0.12.2"
+    "node": ">= 0.12.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/racla/bandejao-puc-rio"
   },
   "keywords": [
     "node",
