--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "assert": "^1.3.0",
+    "bcrypt-nodejs": "latest",
     "ejs": "^2.3.1",
     "eslint": "^2.9.0",
     "express": "~4.9.x",
